[gd_scene load_steps=10 format=3 uid="uid://0ar2fbd3o1ux"]

[ext_resource type="PackedScene" uid="uid://qbfw2s8sjvnx" path="res://scenes/player.tscn" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://d0yvwqirpy71s" path="res://scripts/world.gd" id="1_fj7yv"]
[ext_resource type="PackedScene" uid="uid://ckmhkii5ugpt6" path="res://scenes/boss.tscn" id="3_tlwt5"]
[ext_resource type="ArrayMesh" uid="uid://ps4jokkf8jxi" path="res://prob/Pine tree/PUSHILIN_pine_tree.obj" id="4_aqk2v"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fj7yv"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_tlwt5"]
sky_material = SubResource("ProceduralSkyMaterial_fj7yv")

[sub_resource type="Environment" id="Environment_aqk2v"]
background_mode = 2
sky = SubResource("Sky_tlwt5")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fj7yv"]
albedo_color = Color(0.263493, 0.296261, 1.44392e-07, 1)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_fj7yv"]

[node name="world" type="Node3D"]
script = ExtResource("1_fj7yv")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_aqk2v")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 3.09274, 0)
shadow_enabled = true

[node name="player" parent="." instance=ExtResource("1_f3sb7")]

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.260886, 0.727783)
material_override = SubResource("StandardMaterial3D_fj7yv")
use_collision = true
size = Vector3(100, 0.5, 100)

[node name="Void" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.51618, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Void"]
shape = SubResource("WorldBoundaryShape3D_fj7yv")

[node name="Player_Spawn_Point" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.676621, 0)

[node name="Boss_Spawn_Point" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 112.208, -27.8567)

[node name="boss" parent="." instance=ExtResource("3_tlwt5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -41.351)

[node name="spawn_interval" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="Tree" type="Node3D" parent="."]

[node name="PushilinPineTree" type="MeshInstance3D" parent="Tree"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 42.8894, 4.58187, 35.9162)
mesh = ExtResource("4_aqk2v")
skeleton = NodePath("../..")

[node name="PushilinPineTree2" type="MeshInstance3D" parent="Tree"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 14.4776, 4.58187, 17.3314)
mesh = ExtResource("4_aqk2v")
skeleton = NodePath("../..")

[node name="PushilinPineTree3" type="MeshInstance3D" parent="Tree"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -14.5749, 4.58187, 31.3739)
mesh = ExtResource("4_aqk2v")
skeleton = NodePath("../..")

[node name="PushilinPineTree4" type="MeshInstance3D" parent="Tree"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 28.1513, 4.58187, -21.4922)
mesh = ExtResource("4_aqk2v")
skeleton = NodePath("../..")

[node name="PushilinPineTree5" type="MeshInstance3D" parent="Tree"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -31.5767, 4.58187, -8.83475)
mesh = ExtResource("4_aqk2v")
skeleton = NodePath("../..")

[node name="PushilinPineTree6" type="MeshInstance3D" parent="Tree"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -12.3042, 4.58187, -28.2754)
mesh = ExtResource("4_aqk2v")
skeleton = NodePath("../..")

[node name="PushilinPineTree7" type="MeshInstance3D" parent="Tree"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 43.0145, 4.52431, -6.51812)
mesh = ExtResource("4_aqk2v")
skeleton = NodePath("../..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_right = 173.0
offset_bottom = 287.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 40
text = "WASD - Walk
shift - run
m1 - punch
space - jump
medkit - heal 10%"
horizontal_alignment = 1

[connection signal="body_entered" from="Void" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="spawn_interval" to="." method="_on_spawn_timer_timeout"]
